--- a/index.html
+++ b/index.html
@@ -9,7 +9,11 @@
 <body>
     <header>Welcome to my practice website. I'm still tyring to figure out what I am doing.</header>
 
-    <main>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis, optio! Possimus ad impedit quaerat pariatur.</main>
+    <main>
+        <h1>Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia voluptatum fugit neque nisi perferendis esse?</h1>
+        <img src="images/window.jpg" alt="This is the window in my dining room.">
+
+    </main>
     
     <footer>The end.</footer>
 </body>
