--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
 
     <main>
         <h1>Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia voluptatum fugit neque nisi perferendis esse?</h1>
-        <img src="images/window.jpg" alt="This is the window in my dining room.">
+        <img src="images/window.jpg" alt="dining room window.">
+        <figcaption>This is the window in my dining room.</figcaption>
 
     </main>
     
