--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>My Practice Website</title>
 </head>
 <body>
-    <header>Welcome to my practice website. I'm still tyring to figure out what I am doing.</header>
+    <header>Welcome to my practice website. I'm still trying to figure out what I am doing.</header>
 
     <main>
         <h1>Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia voluptatum fugit neque nisi perferendis esse?</h1>
@@ -16,6 +16,6 @@
 
     </main>
     
-    <footer>The end.</footer>
+    <footer>The end. &copy;2021</footer>
 </body>
 </html>
